# opengl-learning

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  benchmarking.cmake  profile.ps1  testing.cmake
src/: index_buffer.cpp  main.cpp  object.cpp  object_manager.cpp  point.cpp  random_particle.cpp  renderer.cpp  shader.cpp  texture.cpp  uniform.cpp  vertex_array.cpp  vertex_buffer.cpp  window.cpp
src/benchmarks/: loop_milion_points.cpp
src/examples/: milion_points_scene.cpp  point_scene.cpp  raw_scene.cpp
src/include/: error_handling.hpp  global_data.hpp  global_register.hpp  index_buffer.hpp  object.hpp  object_manager.hpp  point.hpp  random_particle.hpp  renderer.hpp  scene.hpp  shader.hpp  shaders.hpp  texture.hpp  uniform.hpp  uniforms.hpp  utils.hpp  vertex.hpp  vertex_array.hpp  vertex_buffer.hpp  vertex_buffer_layout.hpp  window.hpp
src/include/benchmarks/: window_benchmark_fixture.hpp
src/include/examples/: examples.hpp  milion_points_scene.hpp  point_scene.hpp  raw_scene.hpp
src/include/tests/: gl_context_fixture.hpp
src/shaders/: basic.glsl  color.glsl  texture.glsl
src/tests/: object_manager_test.cpp  shader_compile_test.cpp  vertex_buffer_layout_test.cpp
